--- a/Home/index.html
+++ b/Home/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/index.css" />
 
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />  //library to animate elements on your page as you scroll.-->
     <title>Masar Company</title>
@@ -306,8 +309,8 @@
           Email.send({
             Host: 'smtp.elasticemail.com',
             Username: 'basantsaed718@gmail.com',
-            Password: '233DE19F71A53AA86828631A9A3B3167E6D0',
-            To: 'basantsaeed267@gmail.com',
+            Password: '8A127F0ADFE6F1C37A6BEEE3D919B4CDBF32',
+            To: 'basantsaed718@gmail.com',
             From: 'basantsaed718@gmail.com',
             Subject: 'New Form Submission From Your Website..',
             Body: body,
