--- a/Home/Off-plan.html
+++ b/Home/Off-plan.html
@@ -762,6 +762,8 @@
           <div class="swiper-button-prev1" id="swiper-navBtn-prev"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform: none;margin-top:1px"><path d="M13.939 4.939 6.879 12l7.06 7.061 2.122-2.122L11.121 12l4.94-4.939z"></path></svg></div>
           <div class="swiper-pagination1"></div>
         </div>
+      </div>
+    </section>
 
     <section class="property" id="BloomGardens-off">
       <div class="container-rent">
@@ -904,6 +906,8 @@
           <div class="swiper-button-prev1" id="swiper-navBtn-prev"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform: none;margin-top:1px"><path d="M13.939 4.939 6.879 12l7.06 7.061 2.122-2.122L11.121 12l4.94-4.939z"></path></svg></div>
           <div class="swiper-pagination1"></div>
         </div>
+      </div>
+    </section>
 
     <section class="property" id="Masder-off">
       <div class="container-rent">
