--- a/Home/contactus.html
+++ b/Home/contactus.html
@@ -178,9 +178,81 @@
       .home-background video
       {
         width: 100%;
-        object-fit:fill;
-        z-index: 1;
+        height: 700px;
+        object-fit:cover;
+        opacity: 0.25;
+        /*z-index: 1;*/
       }
+
+      
+.home-background {
+  right: 0;
+  width: 100%;
+  min-height: 100vh;
+  padding: 1em;
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  background: #111;
+  transition: all 0.3s ease;
+  z-index: 2;
+}
+
+.home-background.active {
+  right: 100%;
+}
+
+ 
+.home-background video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  object-fit: fill;
+  opacity: 0.25;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #78c3fb;
+  mix-blend-mode: overlay;
+}
+
+.text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+position: relative;
+z-index: 10;
+gap: 10px;
+}
+
+.text h2 {
+color: #fff;
+font-size: 2rem;
+font-weight: 700;
+line-height: 1em;
+}
+
+.text h3 {
+font-size: 2.5em;
+font-weight: 700;
+color: #fff;
+line-height: 1em;
+}
+
+.text p {
+font-size: 1.1em;
+color: #fff;
+font-weight: 400;
+}
+
+ 
       .background-detail {
         margin-top: 75px;}
     </style>
@@ -217,17 +289,26 @@
 
     <!-- home-background section --------------------------------------------------------------->
     <section class="home-background">
-      <div class="background-detail">
         <video
         loop
         autoplay
         muted="true"
         preload="metadata"
         width="100%"
-        height="500px"
         src="img/WhatsApp Video 2024-05-25 at 11.29.06 PM.mp4">
         </video>
+
+      <div class="overlay"></div>
+
+      
+      <div class="text">
+        <h2>Get in Touch</h2>
+        <h3>Convey Your Ideas to Us</h3>
+        <p>
+          Contact us for questions, technical assistance, or collaboration opportunities via the contact information provided.
+        </p>
       </div>
+
     </section>
 
     <!-- Form section --------------------------------------------------------------->
