--- a/Home/index.html
+++ b/Home/index.html
@@ -1243,6 +1243,7 @@
           grabCursor: true,
           pagination: {
             el: '.swiper-pagination',
+            type: "fraction",
           },
           navigation: {
             nextEl: '.swiper-button-next',
