--- a/Home/index.html
+++ b/Home/index.html
@@ -277,11 +277,13 @@
         form.addEventListener('submit', function (event) {
           event.preventDefault();
         });
+        
       </script>
 
       <script src=" https://smtpjs.com/v3/smtp.js"></script>
       <script>
         function validateAndSendEmail1() {
+          let form2=document.getElementById('form2').value;
           let name = document.getElementById('name').value;
           let phone = document.getElementById('phone').value;
           let email = document.getElementById('email').value;
@@ -297,6 +299,8 @@
             return;
           }
           sendEmail1();
+          form2.reset();
+
         }
 
         function sendEmail1() {
@@ -307,14 +311,16 @@
 
           let body = `Name :${name} <br> PhoneNumber :${phone} <br> Email :${email} <br> Message :${message}`;
           Email.send({
-            Host: 'smtp.elasticemail.com',
-            Username: 'basantsaed718@gmail.com',
-            Password: '8A127F0ADFE6F1C37A6BEEE3D919B4CDBF32',
-            To: 'basantsaed718@gmail.com',
-            From: 'basantsaed718@gmail.com',
-            Subject: 'New Form Submission From Your Website..',
+            Host: "smtp.elasticemail.com",
+            Username: "info@masare.ae",
+            Password: "5AD9362381FA25063C5B920E14C2EB6354C3",
+            To: "info@masare.ae",
+            From: "info@masare.ae",
+            Subject: "New Form Submission From Your Website..",
             Body: body,
-          }).then((message) => alert(message));
+            }).then((message) => alert(message));
+
+           //form2.reset();
         }
       </script>
     </section>
@@ -2030,14 +2036,17 @@
 
           let body = `Email: ${email3} <br>PhoneNumber: ${phone3}`;
           Email.send({
-            Host: 'smtp.elasticemail.com',
-            Username: 'basantsaed718@gmail.com',
-            Password: '233DE19F71A53AA86828631A9A3B3167E6D0',
-            To: 'basantsaeed267@gmail.com',
-            From: 'basantsaed718@gmail.com',
-            Subject: 'New Form Submission From Your Website..',
+            Host: "smtp.elasticemail.com",
+            Username: "info@masare.ae",
+            Password: "5AD9362381FA25063C5B920E14C2EB6354C3",
+            To: "info@masare.ae",
+            From: "info@masare.ae",
+            Subject: "New Form Submission From Your Website..",
             Body: body,
           }).then((message) => alert(message));
+
+          form3.reset();
+          
         }
 
         function validateEmail(email) {
