--- a/Home/addproperty.html
+++ b/Home/addproperty.html
@@ -185,6 +185,24 @@
       .active {
         background-color:#192f63;
       }
+      .background-detail {
+        /*margin-top: 30px;*/
+        display: flex;
+        align-items: flex-end;
+      
+          justify-content: center;
+      }
+      .background-img {
+        background-color: #cccccc;
+        height: 670px;
+        min-height: 100vh;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        /*margin-top: 30px;*/
+        image-rendering: -webkit-optimize-contrast;
+      }
+      
     </style>
   </head>
   <body>
