--- a/Home/contactus.html
+++ b/Home/contactus.html
@@ -175,13 +175,13 @@
       .active {
         background-color: #192f63;
       }
-      .home-background video
+      /*.home-background video
       {
         width: 100%;
         height: 700px;
         object-fit:cover;
         opacity: 0.25;
-        /*z-index: 1;*/
+        z-index: 1;
       }
 
       
@@ -196,13 +196,13 @@
   background: #111;
   transition: all 0.3s ease;
   z-index: 2;
-}
+}*/
 
 .home-background.active {
   right: 100%;
 }
 
- 
+/* 
 .home-background video {
   position: absolute;
   top: 0;
@@ -212,7 +212,7 @@
   object-fit: fill;
   opacity: 0.25;
 }
-
+*/
 .overlay {
   position: absolute;
   top: 0;
@@ -252,9 +252,42 @@ color: #fff;
 font-weight: 400;
 }
 
- 
-      .background-detail {
-        margin-top: 75px;}
+
+        .home-background {
+          right: 0;
+          width: 100%;
+          min-height: 100vh;
+          padding: 1em;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background: #111;
+          transition: all 0.3s ease;
+          z-index: 2;
+      }
+  
+      
+  .home-background video {
+    /*margin-top: 30px;*/
+    position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  object-fit: fill;
+  }
+
+  @media screen and (max-width:700px){
+    .home-background {
+      min-height: 0;
+       padding: 0;   }
+
+  .home-background video {
+    margin-top: 80px;
+    position:relative;
+    object-fit: cover;
+}
+  }
     </style>
   </head>
   <body>
@@ -288,7 +321,7 @@ font-weight: 400;
     </nav>
 
     <!-- home-background section --------------------------------------------------------------->
-    <section class="home-background">
+    <!-- <section class="home-background">
         <video
         loop
         autoplay
@@ -309,7 +342,18 @@ font-weight: 400;
         </p>
       </div>
 
-    </section>
+    </section> -->
+
+    <section class="home-background">
+      <video
+      loop
+      autoplay
+      muted="true"
+      preload="metadata"
+      width="100%"
+      src="img/Blue Corporate Professional Real Estate Video (1).mp4">
+      </video>
+  </section>
 
     <!-- Form section --------------------------------------------------------------->
     <div class="form">
