--- a/Home/index.html
+++ b/Home/index.html
@@ -101,7 +101,7 @@
       }
 
       .slide-container {
-        margin: 0 35px;
+        margin: 0 50px;
         overflow: hidden;
       }
       .w-100 {
@@ -139,6 +139,42 @@
           margin: 0 20px;
         }
       }
+
+      .home-background {
+        right: 0;
+        width: 100%;
+        min-height: 100vh;
+        padding: 1em;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: #111;
+        transition: all 0.3s ease;
+        z-index: 2;
+    }
+
+    
+.home-background video {
+/*margin-top: 30px;*/
+position: absolute;
+top: 0;
+left: 0;
+height: 100%;
+width: 100%;
+object-fit: fill;
+}
+
+@media screen and (max-width:700px){
+  .home-background {
+    min-height: 0;
+     padding: 0;   }
+
+.home-background video {
+  margin-top: 80px;
+  position:relative;
+  object-fit: cover;
+}
+}
     </style>
   </head>
 
@@ -174,7 +210,7 @@
     </nav>
 
     <!-- home-background section -->
-    <section class="home-background">
+    <!-- <section class="home-background">
       <div class="background-detail">
         <img
           class="background-img"
@@ -186,7 +222,18 @@
           <h1>KEEP IN TOUCH.....</h1>
         </div>
       </div>
-    </section>
+    </section> -->
+
+    <section class="home-background">
+      <video
+      loop
+      autoplay
+      muted="true"
+      preload="metadata"
+      width="100%"
+      src="img/White Brown Modern Minimalist Real Estate Open House Video (1).mp4">
+      </video>
+  </section>
 
     <!--  Form section ------------------------------------------------------------------------------------------------------>
     <section>
