--- a/Home/sale.html
+++ b/Home/sale.html
@@ -1127,6 +1127,34 @@ object-fit: fill;
       </div>
     </section>
 
+     <section class="property" id="HydraVillage-sale">
+      <div class="container-rent">
+        <p class="section-subtitle">Properties</p>
+        <h2 class="h2 section-title">Hydra Village</h2>
+        <p class="describtionloc">
+          Hydra Village Abu Dhabi is a leasehold development on Highway 11, that
+          connects Abu Dhabi and Dubai around 20 km from Abu Dhabi International
+          Airport. Officially launched in the year 2006, the project was
+          completed in December 2012 as a project of Hydra Properties LLC, a
+          privately owned real estate in Abu DhabiThe villas in Hydra Village
+          are arranged in a series where each unit is connected to the other.
+          With a major focus on functionality, these houses have minimalistic
+          architectural designs and interior finishing. What makes the
+          properties distinctive are the delightful citrusy shades that they are
+          painted with.
+        </p>
+        <div class="container swiper" style="display: grid;align-items: center;">
+          <div class="slide-container">
+            <ul class="property-list swiper-wrapper"></ul>
+          </div>
+          <div class="swiper-button-next1" id="swiper-navBtn-next"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform:none;margin-top: 1px;"><path d="M10.061 19.061 17.121 12l-7.06-7.061-2.122 2.122L12.879 12l-4.94 4.939z"></path></svg></div>
+          <div class="swiper-button-prev1" id="swiper-navBtn-prev"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform: none;margin-top:1px"><path d="M13.939 4.939 6.879 12l7.06 7.061 2.122-2.122L11.121 12l4.94-4.939z"></path></svg></div>
+          <div class="swiper-pagination1"></div>
+        </div>
+      </div>
+    </section>
+
+
     <!-- <section class="property" id="AlShahama-sale">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
@@ -1686,33 +1714,7 @@ object-fit: fill;
       </div>
     </section> -->
 
-    <!-- <section class="property" id="HydraVillage-sale">
-      <div class="container-rent">
-        <p class="section-subtitle">Properties</p>
-        <h2 class="h2 section-title">Hydra Village</h2>
-        <p class="describtionloc">
-          Hydra Village Abu Dhabi is a leasehold development on Highway 11, that
-          connects Abu Dhabi and Dubai around 20 km from Abu Dhabi International
-          Airport. Officially launched in the year 2006, the project was
-          completed in December 2012 as a project of Hydra Properties LLC, a
-          privately owned real estate in Abu DhabiThe villas in Hydra Village
-          are arranged in a series where each unit is connected to the other.
-          With a major focus on functionality, these houses have minimalistic
-          architectural designs and interior finishing. What makes the
-          properties distinctive are the delightful citrusy shades that they are
-          painted with.
-        </p>
-        <div class="container swiper" style="display: grid;align-items: center;">
-          <div class="slide-container">
-            <ul class="property-list swiper-wrapper"></ul>
-          </div>
-          <div class="swiper-button-next1" id="swiper-navBtn-next"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform:none;margin-top: 1px;"><path d="M10.061 19.061 17.121 12l-7.06-7.061-2.122 2.122L12.879 12l-4.94 4.939z"></path></svg></div>
-          <div class="swiper-button-prev1" id="swiper-navBtn-prev"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill: rgba(255, 255, 255, 1);transform: none;margin-top:1px"><path d="M13.939 4.939 6.879 12l7.06 7.061 2.122-2.122L11.121 12l4.94-4.939z"></path></svg></div>
-          <div class="swiper-pagination1"></div>
-        </div>
-      </div>
-    </section> -->
-
+  
     <!-- <section class="property" id="Liwa-sale">
       <div class="container-rent">
         <p class="section-subtitle">Properties</p>
@@ -1976,7 +1978,7 @@ object-fit: fill;
           //{ id: "AlSilaa-sale", city: "Al Silaa" },
           //{ id: "AlWathba-sale", city: "Al Wathba" },
           { id: "Baniyas-sale", city: "Baniyas" },
-          //{ id: "HydraVillage-sale", city: "Hydra Village" },
+          { id: "HydraVillage-sale", city: "Hydra Village" },
           { id: "Khalifa-sale", city: "Khalifa City" },
           { id: "Shakhbout-sale", city: "Shakhbout" },
           { id: "MohamedBinZayed-sale", city: "Mohamed Bin Zayed" },
