--- a/Home/rent.html
+++ b/Home/rent.html
@@ -2066,7 +2066,7 @@
             </div>
           </div>
         `;
-            propertyList.appendChild(listItem);
+            propertyList.prepend(listItem);
           }
         });
 
