--- a/Home/index.html
+++ b/Home/index.html
@@ -1285,7 +1285,7 @@ object-fit: fill;
             </div>
           </div>
         `;
-          propertyList.appendChild(listItem);
+          propertyList.prepend(listItem);
         });
 
         // Initialize swiper
