--- a/Home/sale.html
+++ b/Home/sale.html
@@ -2108,7 +2108,7 @@ object-fit: fill;
             </div>
           </div>
         `;
-            propertyList.appendChild(listItem);
+            propertyList.prepend(listItem);
           }
         });
 
