--- a/Home/Off-plan.html
+++ b/Home/Off-plan.html
@@ -1158,7 +1158,7 @@ object-fit: fill;
           // Check if the property belongs to the current section
           if (property.propertySection === sectionId) {
             const listItem = document.createElement("li");
-            listItem.classList.add("swiper-slide"); // Add swiper-slide class to the li element
+            listItem.classList.add("swiper-slide-card"); // Add swiper-slide class to the li element
             const websiteUrl = "http://masarfrontend-masar.vfbty0.easypanel.host/details.html?id=";
             const websiteurlDetails =
               "details.html?id=";
@@ -1241,7 +1241,7 @@ object-fit: fill;
               </div>
             </div>
           `;
-            propertyList.prepend(listItem);
+            propertyList.prepend(swiper-slide-card);
           }
         });
 
