--- a/Home/Off-plan.html
+++ b/Home/Off-plan.html
@@ -1241,7 +1241,7 @@ object-fit: fill;
               </div>
             </div>
           `;
-            propertyList.prepend(swiper-slide-card);
+            propertyList.prepend(listItem);
           }
         });
 
